logs/Slang/generic/class/class_test_43.sv.log
name: class_test_43
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_43.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_43.sv:7:1: error: language feature not yet supported
class macros_as_class_item;
^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_43.sv:8:2: error: unknown macro or compiler directive '`uvm_object_utils_begin'
 `uvm_object_utils_begin(foobar)
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_43.sv:9:2: error: unknown macro or compiler directive '`uvm_field_int'
 `uvm_field_int(node, UVM_DEFAULT);
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_43.sv:10:2: error: unknown macro or compiler directive '`uvm_field_int'
 `uvm_field_int(foo::bar_t, UVM_DEFAULT);
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_43.sv:11:2: error: unknown macro or compiler directive '`uvm_field_enum'
 `uvm_field_enum(offset, UVM_DEFAULT)
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_43.sv:12:2: error: unknown macro or compiler directive '`uvm_object_utils_end'
 `uvm_object_utils_end
 ^
